--- a/css/keynotes.css
+++ b/css/keynotes.css
@@ -51,7 +51,7 @@
 .ljs2017-keynotes__keynotes {
 	display: flex;
 	flex-direction: row;
-	margin: 4.1vw 0 8.2vw 2vw;
+	margin: 9.1vw 0 8.2vw 2vw;
 
 	@media only screen and (max-width: 750px) {
 		flex-wrap: wrap;
